2008-06-05  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8527: config.removeDefaultJS=1 leaves empty script block

2008-06-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #2905: t3skin - Styling of (non-dyn) tab menus is bad

2008-06-02  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8033: Drag'n'drop in pagetree problem: Dragged menu items disappear under other menuitems, credits Susanne Moog

2008-06-02  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8362: Duplicate entry for [tstamp] and [crdate] in Web->List module for single table in selector-box (thanks to Steffen Kamper)
	* Fixed bug #8573: TypoScript-Help is not displayed for non-Admins, credits Steffen Kamper

2008-05-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8336: JavaScript error in TBE_EDITOR causes login expired dialog

2008-05-30  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8554: installer doesn't check DB problems when creating admin user

2008-05-29  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8270: hardcoded labels in title attributes of icons in top bar of BE interface (thanx to Stefano Kowalke)

2008-05-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8522: Datetime shifts on copy and localize (timezone related)

2008-05-28  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8496: TCEforms: Help Icon is not in the docheader
	* Fixed bug #8504: help icon is not aligned in TCEform (Thanks to Steffen Kamper)
	* Fixed bug #8494: Admin Tools => DB Check => Find Filename has duplicate selectboxes

2008-05-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8412: typo3/file_edit.php replaces ###PATH### in the edited file with the value of $this->title (thanks to Andreas Wagner)

2008-05-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #4455: pid reset to 10000 in Constant Editor

2008-05-24  Ingo Renner  <ingo@typo3.org>

	* removed empty line at end of file in t3lib/thumbs.php

2008-05-21  Jeff Segars  <jeff@webempoweredchurch.org>
